--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -4,14 +4,10 @@
   disappearByUpdate: "2021-04-10"
   date: "2021-04-09"
   body: >
-    **Change to case reporting and revision to historical case data in England**
-
-
-    The way cases are reported has changed. Cases that have been identified through a positive 
-    Lateral Flow Device (LFD) test will be removed for people who took Polymerase Chain Reaction (PCR) tests within 
-    3 days that were all negative. x,xxx cases of this type have been removed from the cumulative total. The newly reported numbers 
-    of cases for the UK and England are unaffected. However, the newly reported cases for regions and local authorities in England are affected
-    by the removal of these cases, and will show significantly lower numbers or zero. These should not be considered as the actual number of new cases reported.
+    **Change to case reporting and revision to historical case data in England.**
+    The way cases are reported has changed. This has resulted in the removal of a number of previously reported cases in England. 
+    This affects newly reported cases on 9 April 2021. Regions and local authorities do not show the actual number of new cases reported. 
+    UK and England numbers of newly reported cases have been adjusted and correctly reflect new cases reported. [*More*](/details/whats-new)
 
 - appearByUpdate: "2021-03-30"
   disappearByUpdate: "2021-04-07"
