--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,4 +1,3 @@
-# {{ StartDevOnlyBlock }}
 
 - appearByUpdate: "2021-04-07"
   disappearByUpdate: "2021-04-10"
@@ -7,7 +6,9 @@
     **Change to case reporting and revision to historical case data in England.**
     The way cases are reported has changed. This has resulted in the removal of a number of previously reported cases in England. 
     This affects newly reported cases on 9 April 2021. Regions and local authorities do not show the actual number of new cases reported. 
-    UK and England numbers of newly reported cases have been adjusted and correctly reflect new cases reported. [*More*](/details/whats-new)
+    UK and England numbers of newly reported cases have been adjusted and correctly reflect new cases reported. [**More**](/details/whats-new)
+    
+# {{ StartDevOnlyBlock }}
 
 - appearByUpdate: "2021-03-30"
   disappearByUpdate: "2021-04-07"
