--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -97,7 +97,9 @@ changeLog:
 
      Newly reported cases at regional and local authority level within England are calculated as the daily change in the total number of cases. 
      This means that for 9 April 2021, these show significantly lower numbers or zero, and should not be considered as the actual number of new cases reported on that date. 
-     Details of the changes and numbers of newly reported cases for 9 April 2021 are available in [csv (wide format)](link) and [csv (long format)](link).
+     Details of the changes and numbers of newly reported cases for 9 April 2021 are available in 
+     [csv (wide format)](/downloads/miscellaneous/cases_reported_2021-04-09_unstacked.csv) and 
+     [csv (long format)](/downloads/miscellaneous/cases_reported_2021-04-09_stacked.csv).
 
   - type: *dataIssue
     date: "2021-04-09"
