--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -92,7 +92,7 @@ changeLog:
      The way cases are reported has changed. Cases that have been identified through a positive rapid lateral flow 
      test will be removed for people who took Polymerase Chain Reaction (PCR) tests within 3 days that were all negative. Cases of this type that were 
      previously reported were removed from the cumulative total, reducing the total by 8,010. Newly reported numbers of cases for the UK and England 
-     were unaffected by the removal of these. Historic published date totals have not been changed.
+     were unaffected by the removal of these. Historical published date totals have not been changed.
 
 
      Newly reported cases at regional and local authority level within England are calculated as the daily change in the total number of cases. 
