--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -5,7 +5,7 @@
   disappearByUpdate: "2021-04-13"
   date: "2021-04-13"
   body: >
-    Owing to a delay in receiving data from Public Health Wales, today's update is delayed.
+    Due to a delay in receiving data from Public Health Wales, today's update is delayed.
     
 - appearByUpdate: "2021-04-07"
   disappearByUpdate: "2021-04-10"
