--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -831,7 +831,7 @@ cards:
     abstract: >
       COVID-19 patients in mechanical ventilation beds. Data from the four nations may not be
       directly comparable as data about COVID-19 patients in hospitals are collected differently. Data
-      are not reported by each nation every day and England data are not available before 2 April. The
+      are not reported by each nation every day and England data are not available before 2 April 2020. The
       UK figure is the sum of the four nations' figures and can only be calculated when all nations'
       data are available.
 
@@ -949,7 +949,7 @@ cards:
     abstract: >
       Mechanical ventilation bed occupany by occupant type. Data from the four nations may not be
       directly comparable as data about COVID-19 patients in hospitals are collected differently. Data
-      are not reported by each nation every day and England data are not available before 2 April. The
+      are not reported by each nation every day and England data are not available before 2 April 2020. The
       UK figure is the sum of the four nations' figures and can only be calculated when all nations'
       data are available.
 
