adds change to lfd case wording

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -418,8 +418,8 @@ cards:
     abstract: >
       Number of people with at least one positive COVID-19 test result. Cases are shown by type of test used in their first positive test and by specimen date.
       Positive rapid lateral flow test results can be confirmed with PCR tests taken within 72 hours. If the PCR test results are negative, these are not reported as cases.
-      The test types shown are lab-based polymerase chain reaction (PCR), rapid lateral flow test (LFD) with postitive PCR (this means the result has been verified
-      with a positive PCR result taken within 3 days) and LFD without PCR (no positive PCR result taken within 3 days).
+      The test types shown are lab-based polymerase chain reaction (PCR), rapid lateral flow test (LFD) with positive PCR (this means the result has been verified
+      with a positive PCR result taken within 3 days) and LFD only (no PCR taken within 3 days).
       People tested positive more than once are only counted once, on the date of their first positive test. Data for the period ending 5 days before 
       the date when the website was last updated with data for the selected area are incomplete. Some LFD results may change or be removed as more PCR results are reported.
 
@@ -453,9 +453,9 @@ cards:
               colour: 9
               rollingAverage: false
 
-            - label: Number of LFD without positive PCR cases
+            - label: Number of LFD only cases
               value: newCasesLFDOnlyBySpecimenDate
-              tooltip: Daily number of new people tested positive using a rapid lateral flow test with no subsequent confirmatory PCR by specimen date
+              tooltip: Daily number of new people tested positive using a rapid lateral flow test by specimen date
               type: bar
               colour: 3
               rollingAverage: false
@@ -479,9 +479,9 @@ cards:
               colour: 9
               rollingAverage: false
 
-            - label: Number of LFD without positive PCR cases
+            - label: Number of LFD only cases
               value: cumCasesLFDOnlyBySpecimenDate
-              tooltip: Total number of new people tested positive using a rapid lateral flow test with no subsequent confirmatory PCR by specimen date
+              tooltip: Total number of new people tested positive using a rapid lateral flow test by specimen date
               type: bar
               colour: 3
               rollingAverage: false
@@ -505,10 +505,10 @@ cards:
               type: numeric
               tooltip: Daily number of new people tested positive using a rapid lateral flow test with subsequent confirmatory PCR by specimen date
 
-            - label: LFD without positive PCR daily
+            - label: LFD daily
               value: newCasesLFDOnlyBySpecimenDate
               type: numeric
-              tooltip: Daily number of new people tested positive using a rapid lateral flow test with no subsequent confirmatory PCR by specimen date
+              tooltip: Daily number of new people tested positive using a rapid lateral flow test by specimen date
 
             - label: All cases daily
               value: newCasesBySpecimenDate
@@ -525,10 +525,10 @@ cards:
               value: cumCasesLFDConfirmedPCRBySpecimenDate
               tooltip: Total number of new people tested positive using a rapid lateral flow test with subsequent confirmatory PCR by specimen date
 
-            - label: LFD without positive PCR total
+            - label: LFD total
               type: numeric
               value: cumCasesLFDOnlyBySpecimenDate
-              tooltip: Total number of new people tested positive using a rapid lateral flow test with no subsequent confirmatory PCR by specimen date
+              tooltip: Total number of new people tested positive using a rapid lateral flow test by specimen date
 
             - label: All cases total
               value: cumCasesBySpecimenDate
